force-app/main/default/objects/Imovel__c/Imovel__c.object-meta.xml
<CustomObject>
    <description>Exibe informações de imóveis</description>
    <label>Imóvel</label>
    <nameField>
        <displayFormat>IMO - {0000}</displayFormat>
        <label>Nome de Imóvel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>