force-app/main/default/objects/Imovel__c/fields/Quartos__c.field-meta.xml
<CustomField>
    <fullName>Quartos__c</fullName>
    <inlineHelpText>Insira a quantidade de quartos do imóvel</inlineHelpText>
    <label>Quartos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>