force-app/main/default/objects/Imovel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Mostra a situação atual do imóvel</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponível</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Impedimento</fullName>
            </value>
            <value>
                <fullName>Em negociação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>