force-app/main/default/objects/Imovel__c/fields/TipoImovel__c.field-meta.xml
<CustomField>
    <fullName>TipoImovel__c</fullName>
    <inlineHelpText>Escolha o tipo do imóvel</inlineHelpText>
    <label>Tipo do Imóvel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>