force-app/main/default/objects/Imovel__c/fields/Visita_Agendada__c.field-meta.xml
<CustomField>
    <fullName>Visita_Agendada__c</fullName>
    <inlineHelpText>Informa a data e hora da visita agendada</inlineHelpText>
    <label>Visita Agendada</label>
    <type>DateTime</type>
</CustomField>