force-app/main/default/objects/Imovel__c/listViews/Imoveis.listView-meta.xml
<ListView>
    <fullName>Imoveis</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <filterScope>Mine</filterScope>
    <label>Imovéis</label>
</ListView>